<resources>
    <string name="app_name">LineXO</string>
    <string name="facebook_app_id">2006040033034086</string>
    <string name="fb_login_protocol_scheme">fb2006040033034086</string>

    <string name="network_error">Kiểm tra kết nối mạng</string>
    <string name="search_hint">Tìm bàn chơi</string>
    <string name="room_ai">Tập chơi</string>
    <string name="room_ai_play">VS</string>
    <string name="create_room">Tạo phòng</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>

    <string name="message_hint">Aa</string>
    <string name="about_us">Về chúng tôi</string>
    <string name="ranking"> Xếp hạng </string>
    <string name="logout"> Đăng xuất </string>
    <string name="login_popup">Đăng nhập</string>
</resources>
