<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.RoomActivity">

    <View
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <vn.edu.hcmut.linexo.presentation.custom.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="@id/action_bar"
        app:layout_constraintBottom_toBottomOf="@id/action_bar"/>
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintLeft_toRightOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintRight_toLeftOf="@id/txt_score"
        app:layout_constraintBottom_toBottomOf="@id/avatar" />
    <TextView
        android:id="@+id/txt_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingLeft="40dp"
        android:paddingTop="3dp"
        android:paddingRight="7dp"
        android:paddingBottom="3dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/colorScore"
        android:background="@drawable/bg_score"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintRight_toRightOf="@id/action_bar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"/>
    <View
        android:id="@+id/score_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/ic_coin"
        app:layout_constraintLeft_toLeftOf="@id/txt_score"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"/>
    
    <TextView
        android:id="@+id/txt_network_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/network_error"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/action_bar"/>

    <EditText
        android:id="@+id/edt_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_search"
        android:background="@drawable/bg_search"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:hint="@string/search_hint"
        app:layout_constraintTop_toBottomOf="@id/txt_network_error"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lst_room"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="30dp"
        app:layout_constraintTop_toBottomOf="@id/edt_search"
        app:layout_constraintBottom_toTopOf="@id/advertisement"/>

    <Button
        android:id="@+id/btn_create_room"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/create_room"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_create_room"
        android:stateListAnimator="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/advertisement"/>

    <View
        android:id="@+id/advertisement"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/advertisement"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>